--- a/assets/styles/common/_variables.less
+++ b/assets/styles/common/_variables.less
@@ -1,6 +1,6 @@
 // Grid settings
-@main-sm-columns:       @grid-columns;
-@sidebar-sm-columns:    4;
+/*@main-sm-columns:       @grid-columns;
+@sidebar-sm-columns:    4;*/
 
 // Colors
 @brand-primary:         #27ae60;
