--- a/assets/styles/components/_grid.less
+++ b/assets/styles/components/_grid.less
@@ -1,3 +1,4 @@
+/*
 // Grid system
 .main {
   .make-sm-column(@main-sm-columns);
@@ -8,3 +9,4 @@
 .sidebar {
   .make-sm-column(@sidebar-sm-columns);
 }
+*/
