Bootstrap variables commented

--- a/assets/styles/components/_wp-classes.less
+++ b/assets/styles/components/_wp-classes.less
@@ -1,6 +1,9 @@
 // WordPress Generated Classes
 // http://codex.wordpress.org/CSS#WordPress_Generated_Classes
 
+
+/*
+
 // Media alignment
 .alignnone {
   margin-left: 0;
@@ -40,3 +43,4 @@
   &:extend(.sr-only all);
   &:extend(.sr-only-focusable all);
 }
+*/
