--- a/assets/styles/main.less
+++ b/assets/styles/main.less
@@ -1,6 +1,5 @@
 // Automatically injected Bower dependencies via wiredep (never manually edit this block)
 // bower:less
-@import "../../bower_components/bootstrap/less/bootstrap.less";
 // endbower
 
 @import "common/_variables";
@@ -15,3 +14,4 @@
 @import "layouts/_footer";
 @import "layouts/_pages";
 @import "layouts/_posts";
+@import "layouts/_front";
