--- a/assets/styles/common/_global.less
+++ b/assets/styles/common/_global.less
@@ -2,6 +2,10 @@
     height:100vh;
 }
 
+.segment-content{
+    padding-top:100px;
+}
+
 .header.uppercase {
   text-transform: uppercase;
 }
@@ -15,7 +19,7 @@ header{
   height: 141px;
   background: #335C7D;
   color: #fff;
-  margin-bottom: 15px;
+  //margin-bottom: 15px;
   z-index: 999999;
   transition: all 0.4s ease;
 
@@ -77,7 +81,3 @@ header.stick {
     }
   }
 }
-
-
-
-
