--- a/assets/styles/layouts/_front.less
+++ b/assets/styles/layouts/_front.less
@@ -1,3 +1,8 @@
+
+.ui.segment{
+    margin:0;
+}
+
 .promotion-item{
   margin: 5px;
 }
@@ -18,7 +23,6 @@
 .promotion-item img{
   width: 100%;
   height: auto;
-
 }
 
 .overlay {
