--- a/assets/styles/common/_global.less
+++ b/assets/styles/common/_global.less
@@ -10,7 +10,7 @@
   text-transform: uppercase;
 }
 
-header{
+header#menu{
   position: relative;
   width: 100%;
   text-align: center;
@@ -52,7 +52,7 @@ header{
 
 }
 
-header.stick {
+header#menu.stick {
   position: fixed;
   font-size: 24px;
   line-height: 48px;
@@ -80,7 +80,7 @@ header.stick {
 }
 
 @media only screen and (max-width: 767px){
-  header{
+  header#menu{
     overflow: visible;
     height: auto;
 
@@ -94,7 +94,7 @@ header.stick {
     }
   }
 
-  header.stick{
+  header#menu.stick{
     position: fixed;
     font-size: 1em;
     line-height: 48px;
