add changes to front page

--- a/assets/styles/common/_variables.less
+++ b/assets/styles/common/_variables.less
@@ -1,6 +1,7 @@
-// Grid settings
-/*@main-sm-columns:       @grid-columns;
-@sidebar-sm-columns:    4;*/
-
-// Colors
 @brand-primary:         #27ae60;
+
+@ft-blue-dark: #1B619B;
+@ft-blue: #ACCBE0;
+@ft-blue-light: #D3E0EA;
+@ft-cream: #F8F2E5;
+@ft-orange:#D75A20;
