--- a/assets/styles/layouts/_front.less
+++ b/assets/styles/layouts/_front.less
@@ -3,6 +3,27 @@
     margin:0;
 }
 
+#promotion.ui.segment{
+    //background-color: @ft-blue;
+}
+
+#services.ui.segment{
+    //background-color: @ft-blue-light;
+    background: url('../images/background/symphony-blue.png');
+    .header{
+        color: lighten(#46a7d8,25%);
+    }
+}
+
+#about.ui.segment{
+    background-color: @ft-cream;
+}
+
+
+#promotion .segment-content{
+    padding-top:5%;
+}
+
 .promotion-item{
   margin: 5px;
 }
@@ -37,8 +58,9 @@
 
 .promotion-content{
   position: absolute;
+  text-align: center;
   width: 100%;
-  top: 40%;
+  top: 35%;
   left: 0;
   padding: 0 15px;
   color: #ffffff;
