--- a/assets/styles/main.less
+++ b/assets/styles/main.less
@@ -14,6 +14,7 @@
 }
 
 @import "common/_variables";
+@import "common/_mixins";
 @import "common/_global";
 @import "components/_buttons";
 @import "components/_comments";
