--- a/assets/styles/layouts/_front.less
+++ b/assets/styles/layouts/_front.less
@@ -4,8 +4,8 @@
 }
 
 #landing{
-    h1.massive-header{font-size:70px; color:red}
-    h2.huge-header{font-size:40px; color:blue;}
+    h1.massive-header{font-size:70px;}
+    h2.huge-header{font-size:40px;}
 }
 
 #promotion.ui.segment{
@@ -14,19 +14,10 @@
 
 #services.ui.segment{
     //background-color: @ft-blue-light;
-    background: url('../images/background/symphony-blue.png');
-    .header{
-        color: lighten(#46a7d8,25%);
-    }
-}
-
-#about.ui.segment{
-/*     //background-color: @ft-cream;
-background: -webkit-linear-gradient(90deg, #83a4d4 10%, #b6fbff 90%); Chrome 10+, Saf5.1+
-background:    -moz-linear-gradient(90deg, #83a4d4 10%, #b6fbff 90%); FF3.6+
-background:     -ms-linear-gradient(90deg, #83a4d4 10%, #b6fbff 90%); IE10
-background:      -o-linear-gradient(90deg, #83a4d4 10%, #b6fbff 90%); Opera 11.10+
-background:         linear-gradient(90deg, #83a4d4 10%, #b6fbff 90%); W3C */
+    //background: url('../images/background/symphony-blue.png');
+/*     .header{
+    color: lighten(#46a7d8,25%);
+} */
 }
 
 
