--- a/assets/styles/layouts/_header.less
+++ b/assets/styles/layouts/_header.less
@@ -16,7 +16,7 @@ header#menu-scroll{
     font-size: 60px;
     line-height: 108px;
     height: auto;
-    //background: @ft-blue;
+    background: ;
     color: #fff;
     //margin-bottom: 15px;
     z-index: 999999;
@@ -56,13 +56,13 @@ header#menu-scroll.stick {
     font-size: 24px;
     line-height: 48px;
     height: auto;
-    background: #f2f2f2;
+    //background: blue;
     border-bottom: 1px solid grey;
     text-align: left;
     padding-left: 20px;
     z-index: 999999;
     transition: all 0.4s ease;
-    opacity:.8;
+    //opacity:.8;
     .logo{
         width: 45%;
         max-width: 100px;
