logo + languages + divers styles

--- a/assets/styles/layouts/_header.less
+++ b/assets/styles/layouts/_header.less
@@ -16,12 +16,14 @@ header#menu-scroll{
     font-size: 60px;
     line-height: 108px;
     height: auto;
-    background: ;
+    background: #24C6DC;
     color: #fff;
     //margin-bottom: 15px;
     z-index: 999999;
     transition: all 0.4s ease;
-
+    
+    a:hover {color:white !important;}
+    
     .home{
         display: block;
         height: auto;
@@ -56,13 +58,13 @@ header#menu-scroll.stick {
     font-size: 24px;
     line-height: 48px;
     height: auto;
-    //background: blue;
+    background: white;
     border-bottom: 1px solid grey;
     text-align: left;
     padding-left: 20px;
     z-index: 999999;
     transition: all 0.4s ease;
-    //opacity:.8;
+    a:hover {color:deepskyblue !important;}
     .logo{
         width: 45%;
         max-width: 100px;
