--- a/assets/styles/layouts/_front.less
+++ b/assets/styles/layouts/_front.less
@@ -1,69 +1,74 @@
-
-.ui.segment{
-    margin:0;
-}
-
-#landing{
-    h1.massive-header{font-size:70px;}
-    h2.huge-header{font-size:40px;}
-}
-
-#promotion.ui.segment{
-    //background-color: @ft-blue;
-}
-
-#services.ui.segment{
-    //background-color: @ft-blue-light;
-    //background: url('../images/background/symphony-blue.png');
-/*     .header{
-    color: lighten(#46a7d8,25%);
-} */
-}
-
-
-#promotion .segment-content{
-    padding-top:5%;
-}
-
-.promotion-item{
-  margin: 5px;
-}
-
-.promotion-item a{
-  width: 100%;
-  height: 100%;
-  display: block;
-  position: relative;
-}
-
-.promotion-content{
-  position: absolute;
-  top: 0;
-  left: 0;
-}
-
-.promotion-item img{
-  width: 100%;
-  height: auto;
-}
-
-.overlay {
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 4px;
-  left: 0;
-  background-color: rgba(0, 0, 0, 0.4);
-  transition: all 0.3s ease;
-}
-
-.promotion-content{
-  position: absolute;
-  text-align: center;
-  width: 100%;
-  top: 35%;
-  left: 0;
-  padding: 0 15px;
-  color: #ffffff;
-  text-shadow: 2px 1px 1px rgba(0, 0, 0, 1);
-}
+  
+  .ui.segment{
+      margin:0;
+  }
+  
+  #landing{
+      h1.massive-header{font-size:60px; color:white;}
+      h2.huge-header{font-size:35px; color:white;}
+      .sub.header{color:white;}
+      background: #24C6DC
+  }
+  
+  #promotion.ui.segment{
+      //background-color: @ft-blue;
+  }
+  
+  #services.ui.segment{
+      //background-color: @ft-blue-light;
+      //background: url('../images/background/symphony-blue.png');
+  /*     .header{
+      color: lighten(#46a7d8,25%);
+  } */
+  }
+  
+  
+  #promotion .segment-content{
+      padding-top:5%;
+  }
+  
+  .promotion-item{
+    margin: 5px;
+  }
+  
+  .promotion-item a{
+    width: 100%;
+    height: 100%;
+    display: block;
+    position: relative;
+  }
+  
+  .promotion-content{
+    position: absolute;
+    top: 0;
+    left: 0;
+  }
+  
+  .promotion-item img{
+    width: 100%;
+    height: auto;
+  }
+  
+  .overlay {
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 4px;
+    left: 0;
+    background-color: rgba(0, 0, 0, 0.4);
+    transition: all 0.3s ease;
+  }
+  .overlay:hover{
+    background-color: rgba(0, 0, 0, 0);
+  }
+  
+  .promotion-content{
+    position: absolute;
+    text-align: center;
+    width: 100%;
+    top: 35%;
+    left: 0;
+    padding: 0 15px;
+    color: #ffffff;
+    text-shadow: 2px 1px 1px rgba(0, 0, 0, 1);
+  }
