form + product bckimg + colors + front page

--- a/assets/styles/common/_mixins.less
+++ b/assets/styles/common/_mixins.less
@@ -3,6 +3,10 @@
     height:100vh;
 }
 
+.colorless{
+    background-color: transparent !important;
+}
+
 .segment-content{
     padding-top:10%;
 }
