--- a/assets/styles/common/_variables.less
+++ b/assets/styles/common/_variables.less
@@ -1,7 +1,7 @@
-@brand-primary:         #27ae60;
+@brand-primary:#27ae60;
 
-@ft-blue-dark: #1B619B;
-@ft-blue: #ACCBE0;
-@ft-blue-light: #D3E0EA;
-@ft-cream: #F8F2E5;
-@ft-orange:#D75A20;
+@ft-primary:        #2980B9;
+@ft-primary-dark:   #2C3E50;
+@ft-primary-light:  #3498DB;
+@ft-secondary:      #E74C3C;
+@ft-third:          #ECF0F1;
