--- a/assets/styles/layouts/_header.less
+++ b/assets/styles/layouts/_header.less
@@ -1,3 +1,10 @@
+header.menu-product{
+    position: absolute;
+    z-index: 9999;
+    a {color:red !important;opacity: 1;}
+    background: transparent;
+}
+
 section#header-menu{
     .mobile-menu{display:none;}
 }
@@ -10,20 +17,20 @@ section#header-menu{
 }
 
 header#menu-scroll{
-    position: relative;
+    //position: relative;
+
     width: 100%;
     text-align: center;
     font-size: 60px;
     line-height: 108px;
     height: auto;
-    background: #24C6DC;
+    background: transparent;
     color: #fff;
     //margin-bottom: 15px;
     z-index: 999999;
     transition: all 0.4s ease;
-    
     a:hover {color:white !important;}
-    
+
     .home{
         display: block;
         height: auto;
