--- a/assets/styles/layouts/_footer.less
+++ b/assets/styles/layouts/_footer.less
@@ -1,5 +1,9 @@
 #main-footer{
-    padding:30px 0;
+    display:block;
+    margin-top:50px;
+    padding-top:30px;
+    padding-bottom:40px;
+    background-color: @ft-secondary;
     #footer-schedule h4{
         margin:0;
     }
