--- a/assets/styles/layouts/_front.less
+++ b/assets/styles/layouts/_front.less
@@ -1,68 +1,73 @@
-  
-  .ui.segment{
-      margin:0;
-  }
-  
-  #landing{
-      h1.massive-header{font-size:60px; color:white;}
-      h2.huge-header{font-size:35px; color:white;}
-      .sub.header{color:white;}
-      background: #24C6DC
-  }
-  
-  #promotion.ui.segment{
-      //background-color: @ft-blue;
-  }
-  
-  #services.ui.segment{
-      //background-color: @ft-blue-light;
-      //background: url('../images/background/symphony-blue.png');
-  /*     .header{
-      color: lighten(#46a7d8,25%);
-  } */
-  }
-  
-  
-  #promotion .segment-content{
-      padding-top:5%;
-  }
-  
-  .promotion-item{
+
+.ui.segment{
+    margin:0;
+}
+
+#landing{
+    h1.massive-header{font-size:60px; color:white;}
+    background: @ft-primary-light;
+    #landing-destinations{.ui.button{margin-bottom: 5px;}}
+}
+
+section#promotion{
+    background: @ft-primary-dark;
+    h2.ui.header{color:white}
+    .segment-content{
+        padding:5% 0;
+    }
+}
+
+section#about{
+    background-color: @ft-primary;
+}
+
+section#services{
+    background: @ft-secondary;
+    .segment-content{
+        padding:5% 0;
+    }
+    .header{
+        color:white;
+    }
+}
+
+
+.promotion-item{
     margin: 5px;
-  }
-  
-  .promotion-item a{
+}
+
+.promotion-item a{
     width: 100%;
     height: 100%;
     display: block;
     position: relative;
-  }
-  
-  .promotion-content{
+}
+
+.promotion-content{
     position: absolute;
     top: 0;
     left: 0;
-  }
-  
-  .promotion-item img{
+}
+
+.promotion-item img{
     width: 100%;
     height: auto;
-  }
-  
-  .overlay {
+}
+
+.overlay {
     position: absolute;
     top: 0;
     right: 0;
     bottom: 4px;
     left: 0;
-    background-color: rgba(0, 0, 0, 0.4);
-    transition: all 0.3s ease;
-  }
-  .overlay:hover{
     background-color: rgba(0, 0, 0, 0);
-  }
-  
-  .promotion-content{
+    transition: all 0.3s ease;
+}
+.overlay:hover{
+    background-color: rgba(0, 0, 0, 0.4);
+}
+
+.promotion-content{
     position: absolute;
     text-align: center;
     width: 100%;
@@ -71,4 +76,4 @@
     padding: 0 15px;
     color: #ffffff;
     text-shadow: 2px 1px 1px rgba(0, 0, 0, 1);
-  }
+}
