--- a/assets/styles/layouts/_product.less
+++ b/assets/styles/layouts/_product.less
@@ -1,5 +1,21 @@
-#details{
-    p{
-    //    font-size:25px;
+.overlay-product{
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: -18px;
+    left: 0;
+    background-color: rgba(0, 0, 0, .4);
+    transition: all 0.3s ease;
+}
+
+#preview{
+    padding-top:150px;
+    .ui.table{
+        background: rgba(25, 25, 25, 0.3);
+        tbody td{color: white;}
     }
+}
+
+#gallery{
+    padding-top:50px;
 }
