--- a/assets/styles/layouts/_front.less
+++ b/assets/styles/layouts/_front.less
@@ -4,6 +4,7 @@
 }
 
 #landing{
+    padding-top: 200px;
     h1.massive-header{font-size:60px; color:white;}
     background: @ft-primary-light;
     #landing-destinations{.ui.button{margin-bottom: 5px;}}
