--- a/assets/styles/main.less
+++ b/assets/styles/main.less
@@ -16,6 +16,7 @@
 @import "common/_variables";
 @import "common/_mixins";
 @import "common/_global";
+@import "common/_fonts";
 @import "components/_buttons";
 @import "components/_comments";
 @import "components/_forms";
