--- a/assets/styles/layouts/_front.less
+++ b/assets/styles/layouts/_front.less
@@ -5,9 +5,9 @@
 
 #landing{
     padding-top: 200px;
-    h1.massive-header{font-size:60px; color:white;}
-    background: @ft-primary-light;
+    h1.massive-header{font-size:60px; color:@ft-primary;}
     #landing-destinations{.ui.button{margin-bottom: 5px;}}
+    h2.ui.icon.header{color:@ft-primary;}
 }
 
 section#promotion{
