--- a/assets/styles/components/_forms.less
+++ b/assets/styles/components/_forms.less
@@ -5,6 +5,8 @@ form{
     .ui-slider-horizontal {
         height: .5em;
     }
+    .ui-slider .ui-slider-handle:focus { outline: none; }
+
     .ui-slider.ui-slider-horizontal.ui-widget{
         background: lightgrey;
         border-radius: 5px;
