--- a/assets/styles/layouts/_header.less
+++ b/assets/styles/layouts/_header.less
@@ -1,7 +1,7 @@
 header.menu-product{
     position: absolute;
     z-index: 9999;
-    a {color:red !important;opacity: 1;}
+    a {color:red !important; opacity: 1;}
     background: transparent;
 }
 
@@ -28,9 +28,8 @@ header#menu-scroll{
     color: #fff;
     z-index: 999999;
     transition: all 0.4s ease;
-    a{text-transform: uppercase; font-weight:bold; color: @ft-primary !important;}
+    a{text-transform: uppercase; font-weight:bold; color: #ffffff !important;}
     a:hover {color:@ft-primary-dark !important;}
-
     .home{
         display: block;
         height: auto;
@@ -92,7 +91,7 @@ header#menu-scroll.stick {
     header#menu-scroll{
         background: @ft-primary-dark;
         overflow: visible;
-        height: auto;        
+        height: auto;
         .logo{
             display: block;
             margin: 0 auto;
