--- a/assets/styles/main.less
+++ b/assets/styles/main.less
@@ -1,5 +1,6 @@
 // Automatically injected Bower dependencies via wiredep (never manually edit this block)
 // bower:less
+@import "../../bower_components/semantic-ui/src/semantic.less";
 // endbower
 
 @font-face {
